# nix-flake-templates

./: README.md  flake.nix
elixir/: .gitignore  flake.nix
elixir/environment/: flake.nix
infrastructure/: flake.nix
python/: flake.nix  overrides.nix  pyproject.toml
python/poetry2nix/: flake.nix  pyproject.toml
rust/: .gitignore  flake.nix
rust/crate2nix/: .gitignore  Cargo.toml  flake.nix
rust/environment/: flake.nix
