[tool.poetry]
name = "package_name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black  = "^21.5b0"
flake8 = "^3.9.2"
mypy   = "^0.812"

[tool.poetry.scripts]
package_name = 'package_name.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
